--- a/writeup/dm_angular_ps.tex
+++ b/writeup/dm_angular_ps.tex
@@ -462,6 +462,7 @@ the fractional over-density of electrons.
 \end{comment}
 
 
+\begin{comment}
 
 \section{Sensitivity}
 
@@ -474,11 +475,17 @@ underestimated and out estimator sub-optimal at the order unity level.
 However since given that the statistics of FRBs are currently essentially
 unconstrained, we continue with this assumption.
 
-We assume parameters X, Y, Z etc.
+% Note about cosmological parameters
 
-\section{Short road to sensitivity}
+\end{comment}
 
-The errorbar on the redshift averaged dispersion measure angular power spectrum
+\section{Simplified sensitivity calculation}
+
+In this section we present a simplified calculation for the sensitivity of the
+above estimator which is valid for sample of observed
+FRBs distributed roughly uniformly over some fraction of the sky.
+
+The error bar on the redshift averaged dispersion measure angular power spectrum
 is
 \begin{equation}
     \sigma_{C_l} = \sqrt{\frac{2}{(2 l + 1) f_{\rm sky}}} (C_l + C^N_l),
@@ -492,7 +499,7 @@ radio bursts.
 %\red{I'm only 80\% sure about the factors of $f_{\rm sky}$}.
 
 $\sigma_D^2$ is the variance of the dispersion measures.  This would in
-practice be measured directly from the observed set, but in terms of
+practise be measured directly from the observed set, but in terms of
 theoretical parameters is
 \begin{equation}
 \sigma_D^2 = \sigma_{\bar{n}_e}^2 + \sigma^2_{\rm src} + \int \ud z \ud z'
@@ -501,7 +508,7 @@ theoretical parameters is
 where the first two terms are defined above in equations \ref{e:sig_nebar}
 through
 \ref{e:sig_src}. The third term is likely
-neglidgable and could also be written as
+negligible and could also be written as
 \begin{equation}
     \int \ud z \ud z' \delta(z - z') p(z) w^{z z'}(1) = \int \ud z \ud z'
     \delta(z - z') p(z) \sum_{l} \frac{2l+1}{4\pi} C_l^{zz}.
