New paper structure outline including Ue-Li's 3d seconds order statistics.

--- a/writeup/dm_angular_ps.tex
+++ b/writeup/dm_angular_ps.tex
@@ -141,7 +141,10 @@ In this \emph{ Letter} we consider the implications of of a cosmological populat
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Notes}\label{sec:notes}
+
+\section{Preliminaries}
+
+
 
 \subsection{Dispersion measure}
 
@@ -196,6 +199,65 @@ here-after we ignore this term.
 We are principally interested in the $D^{\delta_e}$ term as it is a probe of
 large-scale structure. In the next section we relate the statistics of this
 term to cosmology.
+
+
+
+\section{2D statistics}
+% Need beter section title.
+
+Here we consider two dimentional statistics where the cosmological information
+lies in the correlations between dispersion measures at a given angular
+separation.  The information that is in principle available in the angular
+clustering of the FRB events is ignored.
+
+As a cosmological probe this almost perfectly analogouse to the weak lensing 
+of galaxies.
+We wish to estimate the line of site electron column density,
+which, like lensing shear, is an integral along the line-of-site to a source at an
+uncertain redshift. Our observerable the dispersion measure, like galaxy
+elipticity, gives a noisy estimate.  In both cases the angular clustering of
+the sources is ignored.
+
+The dispersion measures of two different FRBs are correlated by two effects.
+The first is correlations in the intervening line-of-site large-scale
+structure.  This correlates the $D^{\delta_e}$ part of the dispersion measures.
+The second effect is that two FRBs with small angular separation are likely to
+be at small redshift separations if FRB events trace large-scale structure.
+This correlates the $D^{\bar{n}_e}$ of the two FRBs.  In principle all
+permutations of $D^{\bar{n}_e}$, $D^{\delta_e}$ and $D^{\rm src}$ should be
+correlated to some degree, however we believe that the two effect described
+here are the dominatnt contributions and defer investications of other effect
+to future work.
+
+\subsection{The dispersion measure angular power-spectrum}
+
+\subsection{estimating the dispersion measure angular power-spectrum}
+
+\subsection{sensitivity estimates}
+
+
+\section{3D statistics}
+
+3D clustering of FRBs using DM as distance proxy.
+
+Dispersion measure space distortions.
+
+\subsection{First order DM space distortions}
+
+LOS election perturbations cause clusturing in unclustered FRBs.
+
+\subsection{Second order DM space distortions}
+
+LOS election perturbations cause non-stationarity/non-gaussianity in clustered FRBs.
+
+
+
+
+
+
+\section{Notes}\label{sec:notes}
+
+
 
 
 \subsection{Relating dispersion measure angular power-spectrum to cosmology}
